# grokipedia-py

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Justfile  README.md  pyproject.toml  requirements.txt
.codex/environments/: environment.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  publish.yml
src/grokipedia/: __init__.py  _types.py  _urls.py  cli.py  client.py  fetch.py  history.py  models.py  parser.py  robots.py  search.py  sitemaps.py
src/grokipedia_py/: __init__.py  client.py  errors.py  fetch.py  httpx_transport.py  models.py  parser.py  robots.py
tests/: package_smoke.py  test_cli.py  test_client_404.py  test_client_page_search.py  test_edit_history_models.py  test_fetchers.py  test_from_html.py  test_grokipedia_class.py  test_parser_company_page.py  test_parser_hello_world.py  test_robots.py
tests/fixtures/: company_page_13065923.html  hello_world_program.html
