[project]
name = "grokipedia-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "caentzminger", email = "112503481+caentzminger@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
http = [
    "httpx>=0.27",
]

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
