[project]
name = "grokipedia-py"
version = "0.1.0"
description = "Structured Grokipedia page parser with robots-aware fetching."
readme = "README.md"
authors = [
    { name = "caentzminger", email = "112503481+caentzminger@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "grokipedia"

[dependency-groups]
dev = [
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "mdformat-ruff>=0.1.3",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
