[project]
name = "grokipedia-py"
version = "0.1.0"
description = "Structured Grokipedia page parser with robots-aware fetching."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "caentzminger", email = "112503481+caentzminger@users.noreply.github.com" }
]
requires-python = ">=3.10"
keywords = [
    "grokipedia",
    "parser",
    "html",
    "robots-txt",
    "scraping",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/caentzminger/grokipedia-py"
Repository = "https://github.com/caentzminger/grokipedia-py"
Issues = "https://github.com/caentzminger/grokipedia-py/issues"
Changelog = "https://github.com/caentzminger/grokipedia-py/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "grokipedia"

[dependency-groups]
dev = [
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
    "mdformat-ruff>=0.1.3",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
